wip: criando tabela de usuarios e configurando template

--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -11,21 +11,9 @@ pt-BR:
 
   activerecord:
     models:
-      funcao:
-        one: "Função"
-        other: "Funções"
-      estabelecimento:
-        one: "Estabelecimento"
-        other: "Estabelecimentos"
-      user_estabelecimento:
-        one: "Usuário Estabelecimento"
-        other: "Usuários Estabelecimentos"
-      categoria:
-        one: "Categoria"
-        other: "Categorias"
-      produto:
-        one: "Produto"
-        other: "Produtos"
+      g_tipo_usuario:
+        one: "Tipo de Usuário"
+        other: "Tipos de Usuário"
     attributes:
       funcao:
         nome: "Nome"
